@@ -8,6 +8,8 @@ Anschließend kann diese Liste wieder geleert werden.
 * Gateway-Liste: jeder Gateway ist verlinkt mit einer Karte auf der die Route vom eigenen AP zum Gateway visualisiert ist
 * root-Passwort ist bei einer Erstinstallation leer
 ** zuvor wurde "admin" vorgegeben, da openwrt bis einschließlich Barrier Breaker den ssh-Dienst nur startete wenn ein Passwort gesetzt ist
+* bei Verlust einer Gateway-Verbindung werden alle Gateway-Dienste dieses Hosts als unklar definiert
+** bisher dauerte die Verbindungsunterbrechung durch die Wartezeit auf die anderen Dienste desselben Hosts bis zu zehn Minuten
 * Monitoring:
 ** die Ping-Latenz zum UGW und zum VPN-Tunnel-Gateway ist via munin auswertbar
 * Fehlerkorrekturen:
